packages/error/test/helpers/throw-error.js
import { SemanticReleaseError } from '../../src';

module.exports = () => {
  throw new SemanticReleaseError('message', 'code');
};
